<resources>
    <string name="app_name">Easy Appointment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="RegisterNewAccount" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>

    <!-- Week days -->
    <string name="monday">"Monday"</string>
    <string name="tuesday">"Tuesday"</string>
    <string name="wednesday">"Wednesday"</string>
    <string name="thursday">"Thursday"</string>
    <string name="friday">"Friday"</string>

    <!-- Time -->
    <string name="start_time">"Start Time"</string>
    <string name="end_time">"End Time"</string>

    <!-- Appointments status-->
    <string name="accepted">"accepted"</string>
    <string name="pending">"pending"</string>

    <!-- Account type -->
    <string name="client">"Client"</string>
    <string name="provider">"Provider"</string>

    <!-- Submit -->
    <string name="submit">"submit"</string>


</resources>
